<resources>
    <string name="app_name" translatable="false">_T10011_2</string>

    <!--20190919 추가-->
    <!--Environment.getExternalStoragePublicDirectory 하위에 만들 것.-->
    <string name="APP_DATA_DIRECTORY" translatable="false">/Android/data/</string>
    <string name="APP_DATA_DIRECTORY_NAME" translatable="false">com.example.AndroidSS</string>
    <string name="APP_DATA_DIRECTORY_NAME_VOICE" translatable="false">recorded_files</string>
    <string name="APP_DATA_DIRECTORY_NAME_VOICE_DIR" translatable="false">/recorded_files</string>

    <string name="ERR_EDITTEXT_NOVALUE">Not entered</string>
    <string name="ERR_FROM_CODE">An error has been detected.</string>
    <string name="ERR_FROM_GPS_NETWORK">Geocoder service not available</string>
    <string name="ERR_FROM_GPS_WRONG_LOCATION">Invalid GPS coordinates</string>
    <string name="ERR_FROM_GPS_NO_LOCATION">Your location has not been verified.</string>


    <string name="TEXT_EMPTY" translatable="false"></string>

    <string name="TEXT_NOTICE">Guidance</string>
    <string name="TEXT_WELCOME">Welcome.</string>
    <string name="TEXT_WRITE_YOUR_NAME">Name</string>
    <string name="TEXT_WRITE_YOUR_PW">Password</string>
    <string name="TEXT_LOGOUT">Logout</string>

    <string name="TEXT_PERMISSION_NOTICE">You must accept the %s permission to use the service.</string>
    <string name="TEXT_PERMISSION_CALL_PHONE">Calling phone</string>
    <string name="TEXT_PERMISSION_ACCESS_FINE_LOCATION">Location via Wi-Fi</string>
    <string name="TEXT_PERMISSION_ACCESS_COARSE_LOCATION">Location verification using base station information</string>
    <string name="TEXT_PERMISSION_RECORD_AUDIO">Voice recording</string>
    <string name="TEXT_PERMISSION_WRITE_EXTERNAL_STORAGE">Save file</string>
    <string name="TEXT_PERMISSION_INTERNET">Internet</string>
    <string name="TEXT_PERMISSION_READ_SMS">Read message</string>
    <string name="TEXT_PERMISSION_RECEIVE_SMS">Receive message</string>
    <string name="TEXT_PERMISSION_READ_CONTEXT">Read context</string>

    <string name="TEXT_GPS_CURRENT_POSITION">Current location :</string>
    <string name="TEXT_GPS_DISABLED">GPS (location service) is disabled.</string>
    <string name="TEXT_GPS_NOTICE">GPS is required to use the service. Please activate GPS.</string>
    <string name="TEXT_GPS_ON">GPS is activated.</string>

    <!--<string name="TEXT_AUDIO_FILE_NAME">/AudioRecording.3gp</string>-->
    <string name="TEXT_AUDIO_FILE_NAME_FORMAT" translatable="false">/RecordedAudio_%s.3gp</string>
    <string name="TEXT_AUDIO_RECORD_STARTED">Recording has started.</string>
    <string name="TEXT_AUDIO_RECORD_STOPPED">Recording has stopped.</string>
    <string name="TEXT_AUDIO_RECORD_IS_RUNNING">Recording</string>
    <string name="TEXT_AUDIO_RECORD_LISTENING_STOPPED">Playback has stopped</string>
    <string name="TEXT_AUDIO_RECORD_LISTENING_STARTED">Playback has started</string>


    <!-- TEST DATA -->
    <string name="TEXT_CALL_NUM" translatable="false">01062771242</string>

    <string name="BTN_OK">Confirm</string>
    <string name="BTN_CANCEL">Cancel</string>

    <string name="XML_DESC_TEXTVIEW">Text view</string>
    <string name="XML_DESC_CALL_BTN">Call button</string>
    <string name="XML_DESC_GPS_BTN">GPS button</string>
    <string name="XML_DESC_AUDIO_RECORD_BTN">Voice recording button</string>
    <string name="XML_DESC_SPEAKER_BTN">Speaker button</string>
    <string name="XML_TEXT_START_RECORD">Start recording</string>
    <string name="XML_TEXT_STOP_RECORD">Stop recording</string>
    <string name="XML_TEXT_PLAY_RECORD">Start playing</string>
    <string name="XML_TEXT_STOP_RECORD_PLAYING">Stop playing</string>
    <string name="XML_HINT_RESULT_TEXTVIEW">Result window</string>

    <!--임시값-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="TEXT_TTS_INFO_OF_SENDER">A message from %s has arrived</string>

    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <!-- 문자열 참조하는 방법 메모 -->
    <!--
        XML : @string/(STRING NAME)
        KT  : R.string.(STRING NAME)
    -->
</resources>
