<?xml version="1.0" encoding="utf-8"?>

<!--20190916 제작-->
<!--20190923 추가(custom-res-auto) / for auto-resizeing button-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:contentDescription="@string/XML_DESC_TEXTVIEW" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRecord"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/XML_TEXT_START_RECORD" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/XML_TEXT_STOP_RECORD" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/XML_TEXT_PLAY_RECORD"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnStopPlay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/XML_TEXT_STOP_RECORD_PLAYING" />

        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/callBtn"
                android:layout_width="205dp"
                android:layout_height="150dp"
                android:contentDescription="@string/XML_DESC_CALL_BTN"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <ImageButton
                android:id="@+id/gpsBtn"
                android:layout_width="205dp"
                android:layout_height="150dp"
                android:contentDescription="@string/XML_DESC_GPS_BTN"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/voiceBtn"
                android:layout_width="205dp"
                android:layout_height="150dp"
                android:contentDescription="@string/XML_DESC_AUDIO_RECORD_BTN"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />

            <ImageButton
                android:id="@+id/speakerBtn"
                android:layout_width="205dp"
                android:layout_height="150dp"
                android:contentDescription="@string/XML_DESC_SPEAKER_BTN"
                tools:srcCompat="@android:drawable/stat_sys_speakerphone" />

        </LinearLayout>

        <Button
            android:id="@+id/returnHomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TEXT_LOGOUT"
            android:text="@string/TEXT_LOGOUT" />

    </LinearLayout>

</LinearLayout>